# crud_fastapi_postgres

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  main.py  models.py  routes.py  schemas.py
frontend/: Dockerfile  app.py
