[project]
name = "crud-fastapi-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "fastapi>=0.116.0",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.11.7",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]
